<resources>
    <string name="app_name">QuikPay</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="setup_money_pools">Setup Money Pools</string>
    <string name="hi_there_welcome_to">Hi there,\nWelcome to </string>
    <string name="setup_money_pools_intro">Request for money from friends and family\n when splitting bills</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="make_payment">Make Payment</string>
    <string name="fund_wallet_intro">Add funds to your mobile wallet from any bank account</string>
    <string name="make_payment_intro">Send money to anyone from your wallet</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login_title">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_time_here_sign_up">First Time Here? Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="title_activity_god">GodActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2">2</string>
    <string name="new_account">New Account</string>
    <string name="steps">Steps</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="label_continue">Continue</string>
    <string name="back_to_login"><![CDATA[< Back to login]]></string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit_my_profile">Edit My Profile</string>
    <string name="menu_view_history">View History</string>
    <string name="menu_pool">Pool</string>
    <string name="menu_send">Send</string>
    <string name="menu_contacts">Contacts</string>
    <string name="tab_all">All</string>
    <string name="tab_received">Received</string>
    <string name="tab_sent">Sent</string>
    <string name="balance">Balance</string>
    <string name="top_up">Top up</string>
    <string name="sample_name_female">Jane Peterson</string>
    <string name="var_reference_no">Ref. No: %1$s</string>
    <string name="var_amount_whole_plus">+$%1$s.</string>
    <string name="var_amount_whole">$%1$s.</string>
    <string name="var_amount_whole_minus">-$%1$s.</string>
    <string name="view_older">View Older</string>
    <string name="tab_request">Request</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_open_pools">Open Pools</string>
    <string name="search">Search</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_done">Done</string>
    <string name="request_desc">Money Pool request from %1$s</string>
    <string name="request_sent_date">Sent %1$s</string>
    <string name="select_bank_account">Select bank account</string>
    <string name="btn_continue">Continue</string>
    <string name="send_to">Send to</string>
    <string name="quikpay_account">Quikpay Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="done">Done</string>
    <string name="enter_description_optional">Enter Description (Optional)</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="dollar">$</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_quikpay_id">Enter Quikpay ID</string>
    <string name="or">or</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_profile">Update Profile</string>
    <string name="please_enter_your_registered_email_id">Please enter your registered email ID</string>
    <string name="add_contact">Add Contact</string>
    <string-array name="banks">
        <item>Access Bank Plc</item>
        <item>Citibank Nigeria Limited</item>
        <item>Ecobank Nigeria Plc</item>
        <item>Fidelity Bank Plc</item>
        <item>First Bank Nigeria Limited</item>
        <item>First City Monument Bank Plc</item>
        <item>Globus Bank Limited</item>
        <item>Guaranty Trust Bank Plc</item>
        <item>Heritage Banking Company Ltd.</item>
        <item>Key Stone Bank</item>
        <item>Polaris Bank</item>
        <item>Providus Bank</item>
        <item>Stanbic IBTC Bank Ltd.</item>
        <item>Standard Chartered Bank Nigeria Ltd.</item>
        <item>Sterling Bank Plc</item>
        <item>SunTrust Bank Nigeria Limited</item>
        <item>Titan Trust Bank Ltd</item>
        <item>Union Bank of Nigeria Plc</item>
        <item>United Bank For Africa Plc</item>
        <item>Unity Bank Plc</item>
        <item>Wema Bank Plc</item>
        <item>Zenith Bank Plc</item>
    </string-array>
</resources>
