<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pool"
            android:icon="@drawable/ic_round_compare_arrows_24"
            android:title="@string/menu_pool" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_round_credit_card_24"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_round_people_24"
            android:title="@string/menu_contacts" />
    </group>
</menu>