<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="sendMoneyViewModel"
            type="com.example.quikpay.ui.sendmoney.SendMoneyViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_quikpay_acc_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_quikpay_acc_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_quikpay_id"
                android:inputType="number"
                android:maxLength="10"
                android:text="@{sendMoneyViewModel.quikpayAccNo.toString()}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_quikpay_acc_no"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@+id/edit_text_quikpay_acc_no"
            app:layout_constraintTop_toTopOf="@+id/edit_text_quikpay_acc_no" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_quikpay_acc_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_quikpay_acc_no">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_round_person_24" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_quikpay_amount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_quikpay_acc_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_quikpay_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:text="@{sendMoneyViewModel.amount.toString()}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_quikpay_amount"
            app:layout_constraintStart_toStartOf="@+id/edit_text_quikpay_acc_no"
            app:layout_constraintTop_toTopOf="@+id/edit_text_quikpay_amount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_quikpay_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/edit_text_quikpay_acc_no"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_quikpay_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_quikpay_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:hint="@string/enter_description_optional"
                android:inputType="textMultiLine"
                android:lines="2"
                android:singleLine="false"
                android:text="@{sendMoneyViewModel.description.toString()}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:onClick="@{()->sendMoneyViewModel.startSendMoneyQuikpay()}"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_quikpay_description"
            app:layout_constraintStart_toStartOf="@+id/edit_text_quikpay_description" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>